# tgc-s4-agent-tutorial

./: .gitignore  CLAUDE.md  DevEnvSetup.md  README.md  tgc-s4-agent-tutorial.code-workspace
agent-langgraph/: README.md  pyproject.toml
agent-langgraph/src/: agent.py  code_executor.py  endpoint.py
agent-langgraph/src/system_prompts/: orchestrator_prompt.md
agents-python/: main.py  pyproject.toml
agents-python/agent-adk/: agent_server_runner.py  extended_copilotkit_adk_agent.py  main.py  pyproject.toml
agents-python/agent-adk/agent/: agent.py
agents-python/agent-adk/agent/system_prompts/: orchestrator_prompt.md  tic_tac_toe_prompt.md
agents-python/agent-langgraph/: agent.py  config.py  endpoint.py  main.py  pyproject.toml
agents-python/agent-langgraph/src/: endpoint.py
agents-python/agent-langgraph/system_prompts/: data_generation_prompt.md
agents-python/agent-pydantic-ai/: agent.py  main.py  pyproject.toml
agents-python/code-executor/: code_executor.py  pyproject.toml
frontend/: README.md  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/_shared/: DatePicker.tsx
frontend/src/components/copilotActions/: CompletionCountChart.tsx  TodoListInAgent.tsx
frontend/src/components/todos/: TodoApp.tsx  TodoBulkActions.tsx  TodoComposer.tsx  TodoContext.tsx  TodoFilters.tsx  TodoItem.tsx  TodoList.tsx  types.ts  useTodos.ts
frontend/src/hooks/useCopilotActions/: useAddTodoCopilotAction.ts  useCopilotActions.ts  useRemoveTodoCopilotAction.ts  useShowCompletionCountChartCopilotAction.tsx  useShowTodoListCopilotAction.tsx  useUpdateTodoCopilotAction.ts
frontend/src/lib/: supabaseServer.ts
ui/: next.config.js  package.json  pnpm-lock.yaml
ui-adk/: package.json  pnpm-lock.yaml
ui-adk/app/: page.tsx
ui-adk/app/components/: GameBoard.tsx
ui-adk/app/types/: game.ts
ui/app/: globals.css  layout.tsx  page.tsx
(+15 files in other folders)
